2006-03-10  Julien Puydt  <jpuydt@free.fr>

	* help/Makefile.am: Added "de" to DOC_LINGUAS.

2006-03-08  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/manager.cpp:
	Removed LPC-10 codec, added G.726-16k and G.721.

2006-03-08  Damien Sandras  <dsandras@gnome.org>

	* src/gui/preferences.cpp:
	Fixed crash on exit with --disable-gnome version due to wrong 
	backend being used.

2006-03-08  Damien Sandras  <dsandras@gnome.org>

	* src/gui/main.cpp:
	Make sure that we have at least QCIF size for the first picture 
	displayed.

	* src/devices/fakevideoinput.cpp:
	Fixed #333938.

	* src/gui/preferences.cpp:
	Fixed #332042.

2006-03-08  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/sip.cpp:
	Updated timeouts again.
	
2006-03-07  Damien Sandras  <dsandras@gnome.org>

	* src/devices/videoinput.cpp:
	Cleanups.

2006-03-02  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/sip.cpp:
	Improved timeouts.
	
2006-03-01  Jan Schampera <jan.schampera@unix.net>

	* src/gui/main.cpp: Code cleanups and small improvements.

2006-02-27  Julien Puydt  <jpuydt@free.fr>

	* lib/gmcontacts/gmcontacts.h: Named the arguments of
	gnomemeeting_addressbook_get_contacts, so the previous explanations
	get more useful ;-)

2006-02-22  Damien Sandras  <dsandras@gnome.org>

	* src/gui/chat.cpp src/gui/preferences.cpp:
	Cleanups.

2006-02-22  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/ekiga.cpp src/gui/addressbook.cpp:
	Added missing menu items thanks to Jan Schampera.

	* lib/gui/gmstockicons.c:
	Added missing stock icon.

	* src/gui/main.cpp:
	Applied patch from Brian Lu <brian lu sun com> to fix full screen on big
	endian machines.

2006-02-22  Julien Puydt  <jpuydt@free.fr>

	* lib/gui/gmtray/gmtray-x11.c: Fixed #330802.

2006-02-21  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/ekiga.cpp src/endpoints/h323.cpp 
	src/endpoints/sip.cpp: Added possibility to have several IP addresses 
	on the same interface.
